# uriparser

./: CMakeLists.txt  liburiparser.pc.in
doc/: CMakeLists.txt  Doxyfile.in
src/: config.h.in
test/: MemoryManagerSuite.cpp  VersionSuite.cpp
tool/: uriparse.c
